[project]
name = "master-osint-mcp"
version = "0.1.0"
description = "Master OSINT MCP - Open Source Intelligence tools for Model Context Protocol"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "fastmcp>=2.12.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "waybackpy>=3.0.0",
    "spacy>=3.8.0",
    "phonenumbers>=9.0.0",
    "tldextract>=5.3.0",
    "python-whois>=0.9.0",
    "dnspython>=2.8.0",
    "exifread>=3.5.0",
]
